gitignore was ignoring too much

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /.bundle
 /.ruby-version
-/bin/
+/bin
 /spec/fixtures/.librarian
 /spec/fixtures/.tmp
 /spec/fixtures/Puppetfile.lock
-/spec/fixtures/modules
+/spec/fixtures/modules/boxen
 /spec/fixtures/vendor
